@@ -184,7 +184,7 @@ class Api():
     def redirectImageUrl(self, imageUrl, width=300, height=170):
         # HACK: the servers behind /mu-online/api/1.2 is often returning Content-Type="text/xml"
         # instead of "image/jpeg", this problem is not pressent for /mu/bar (the "Classic API")
-        assert(self.api.API_URL.endswith("/mu-online/api/1.2"))
+        assert(self.API_URL.endswith("/mu-online/api/1.2"))
         return imageUrl.replace("/mu-online/api/1.2/bar/", "/mu/bar/") + "?width={:d}&height={:d}".format(width, height)
 
     def _handle_paging(self, result):
