@@ -1,3 +1,6 @@
+[B]Version 5.1.1 - 2022-04-20[/B]
+- hot-fix to use hls inputstreams
+
 [B]Version 5.1.0 - 2022-04-01[/B]
 - re-factor for python 3 only
 - remove exception handling for pastebin
